# wxWidgets-BuildLibScripts

./: LICENSE  README.md
DemoApp/Dynamic/: CMakeLists.txt
DemoApp/Dynamic/src/: main.cpp
DemoApp/Static/: CMakeLists.txt
Linux/: DynamicLib_GCC.sh  StaticLib_GCC.sh
Windows/: DynamicLib_MSVC.bat  DynamicLib_MinGW.bat  StaticLib_MSVC.bat  StaticLib_MinGW.bat
